2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Indend `show point indices' check box.

	* src/ftinspect.cpp (MainGUI::createLayout): Implement it.

	* src/ftinspect.h: Updated.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.cpp (MainGUI::checkAutoHinting): Fix logic for
	warping check box.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add check box for auto-hinting.

	This allows easier hinting mode switch than having it in the hinting
	mode combo box.

	* src/ftinspect.cpp (MainGUI::checkAutoHinting): New method,
	containing almost stuff from ...
	(MainGUI::checkHintingMode): Updated.
	(MainGUI::createLayout): Updated; we also indent check boxes
	dependent on auto-hinting.
	(MainGUI::createConnections, MainGUI::setDefaults): Updated.

	* src/ftinspect.h: Updated.
	(HintingModes): Remove `HintingMode_AutoHinting' enum value.

2016-05-06  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Disable unavailable items in anti-aliasing combo box.

	* src/ftinspect.h (MainGUI): Make `setDefaults' public.
	(hintingModesTrueTypeHash, hintingModesCFFHash): New maps.
	(hintingModesAlwaysDisabled): New list.

	* src/ftinspect.cpp (MainGUI::setDefaults): Set up mappings between
	GUI enumerations and FreeType property values.

	Use them to create `hintingModesAlwaysDisabled', a list of enum
	values that gets fed to the anti-alias combo box's `setItemDisabled'
	method.
	(MainGUI::MainGUI): Don't call `setDefaults'
	here but...
	(main): ... here, after FreeType initialization.

2016-05-05  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Handle engine properties.

	* src/ftinspect.cpp (Engine::Engine): Handle CFF's `hinting-engine',
	TrueType's `interpreter-version', and the auto-hinter's `warping'
	properties.

	* src/ftinspect.h (Engine): Updated.

2016-05-05  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Start implementation of `showFont'.

	* src/ftinspect.cpp (MainGUI::loadFonts): Call `showFont'.